:art: ficha_Carlos

--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -24,5 +24,15 @@
             5. PR en la página del repositorio
 
     -->
+    <div>
+        <h1>Carlos Uriel Flores Gómez</h1>
+        <br><br>
+        <p>Interestelar</p>
+        <ul>
+            <li>XJapan</li>
+            <li>Your Favorite Enemies</li>
+            <li>Utada Hikaru</li>
+        </ul>
+    </div>
 </body>
 </html>
