:art: ficha_leonardo

--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -24,5 +24,16 @@
             5. PR en la página del repositorio
 
     -->
+    <div>
+        <h1>LEONARDO MENDEZ MERLIN</h1>
+        <BR></BR>
+        <P>SAW</P>
+        <BR></BR>
+        <UL>
+            <LI>COLDPLAY</LI>
+            <LI>REYNO</LI>
+            <LI>CAMILO SEPTIMO</LI>
+        </UL>
+    </div>
 </body>
 </html>
