:art:ficha_angel

--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -24,5 +24,14 @@
             5. PR en la página del repositorio
 
     -->
+    <div>
+        <h1>ANGEL CRUZ MARTINEZ</h1>
+        <P>AMORES PERROS</P>
+        <ul>
+            <li>SIN BANDERA</li>
+            <li>ZOE</li>
+            <li>Evanescence</li>
+        </ul>
+    </div>
 </body>
 </html>
