:art: ficha_Xoch

--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -23,6 +23,15 @@
             4. Empujar cambios
             5. PR en la página del repositorio
 
-    -->
+    --> 
+    <div>
+        <h1>Xochitl Colin Villavicencio</h1>
+        <p>La espada en la piedra</p>
+        <ul>
+            <li>Reyno</li>
+            <li>Little Jesus</li>
+            <li>Camilo Séptimo</li>
+        </ul>
+    </div>
 </body>
 </html>
