:art: Ficha_Diego

--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -24,5 +24,14 @@
             5. PR en la página del repositorio
 
     -->
+    <div>
+        <h1>Diego Galvan Lopez</h1><br>
+        <p>Avengers Infinity war</p>
+        <ul>
+            <li>Shawn James</li>
+            <li>Queen</li>
+            <li>AC/DC</li>
+        </ul>
+    </div>
 </body>
 </html>
