:art: ficha_adri

--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -24,5 +24,18 @@
             5. PR en la página del repositorio
 
     -->
+    <div>
+        <h1>Adriana Macedo Sánchez</h1>
+        <br><br>
+        <p>Creo en ti</p>
+        <br><br>
+        <ul>
+            <li>camila</li>
+            <li>Reik</li>
+            <li>Sin bandera</li>
+            <li>Shakira</li>
+        </ul>
+    </div>
+
 </body>
 </html>
