:ART:ficha_lorena

--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -24,5 +24,18 @@
             5. PR en la página del repositorio
 
     -->
+    <div>
+        <h1>Maria de los Angeles Lorena Salgado Ruiz</h1>
+        <br></br>
+        <P>Pelicula favorita: No se aceptan devoluciones</P>
+        <br></br>>
+        <ul>
+            <li> 1.-Matisse
+                2.- Rio roma 
+                3.-OV7
+            </li>
+        </ul>
+    </div>
+    
 </body>
 </html>
