:art: ficha_Xochitl

--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -24,14 +24,12 @@
             5. PR en la página del repositorio
 
     --> 
-    <div>
-        <h1>Xochitl Colin Villavicencio</h1>
-        <p>La espada en la piedra</p>
-        <ul>
-            <li>Reyno</li>
-            <li>Little Jesus</li>
-            <li>Camilo Séptimo</li>
-        </ul>
-    </div>
+    <div>XOCHITL COLIN VILLAVICENCIO</div>
+    <p>LA ESPADA EN LA PIEDRA</p>
+    <ul>
+        <li>REYNO</li>
+        <li>LITTLE JESUS</li>
+        <li>CAMILO SÉPTIMO</li>
+    </ul>
 </body>
 </html>
