--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -42,6 +42,14 @@
             <li>Your Favorite Enemies</li>
             <li>Utada Hikaru</li>
         </ul>
+        <h1>Carlos Uriel Flores Gómez2</h1>
+        <br><br>
+        <p>Interestelar2</p>
+        <ul>
+            <li>XJapan2</li>
+            <li>Your Favorite Enemies2</li>
+            <li>Utada Hikaru2</li>
+        </ul>
     </div>
 </body>
 </html>
