:art: ficha_carlos2

--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -24,6 +24,16 @@
             5. PR en la página del repositorio
 
     --> 
+    <div>
+        <h1>Carlos Uriel Flores Gómez2</h1>
+        <br><br>
+        <p>Interestelar2</p>
+        <ul>
+            <li>XJapan2</li>
+            <li>Your Favorite Enemies2</li>
+            <li>Utada Hikaru2</li>
+        </ul>
+    </div>
     <div>XOCHITL COLIN VILLAVICENCIO</div>
     <p>LA ESPADA EN LA PIEDRA</p>
     <ul>
