:art: ficha-Javier

--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -32,6 +32,16 @@
         <li>CAMILO SÉPTIMO</li>
     </ul>
     -->
+
+    <div>Francisco Javier Alvarez Garcia
+        <p>WandaVision</p>
+        <ul>
+                <li>Angeles Azules</li>
+                <li>Daniela Calvario</li>
+                <li>Raymix</li>
+        </ul>
+    </div>
+
     <div>
         <h1>Adriana Macedo Sánchez</h1>
         <br><br>
