:art: ficha-Javier

--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -33,7 +33,8 @@
     </ul>
     -->
 
-    <div>Francisco Javier Alvarez Garcia
+    <div>
+        <h1>Francisco Javier Alvarez Garcia</h1>
         <p>WandaVision</p>
         <ul>
                 <li>Angeles Azules</li>
