--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -71,6 +71,16 @@
         </ul>
     </div>
     <hr>
+    <div>
+        <h1>Francisco Javier Alvarez Garcia</h1>
+        <p>WandaVisio</p>
+        <ul>
+            <li>Angeles Azules</li>
+            <li>Daniela Calvario</li>
+            <li>Raymix</li>
+        </ul>
+    </div>
+
 
     <div>
         <h1>Maria de los Angeles Lorena Salgado Ruiz</h1>
