:art: ficha_paola

--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -24,5 +24,16 @@
             5. PR en la página del repositorio
 
     -->
+    <div>
+        <h1>Paola Barragan Bernal</h1>
+        <br><br>
+        <p>La vida es bella</p>
+        <br><br>
+        <ul>
+            <li>Kiss</li>
+            <li>The Beatles</li>
+           <li>Nsync</li>
+        </ul>
+    </div>
 </body>
 </html>
