:art: ficha_enrique

--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -140,5 +140,22 @@
             <li>Utada Hikaru</li>
         </ul>
     </div>
+    <hr>
+
+    <div>
+        <h1>Enrique Aguirre Ortiz</h1>
+        <br>
+        <p>El ultimo regalo</p>
+        <ul>
+
+            <li>
+                Alejandro fernandez
+            </li>
+            <li>pepe aguilar
+        
+            </li>
+            <li>Antonio Aguilar</li>
+        </ul>
+    </div>
 </body>
 </html>
