--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -103,7 +103,7 @@
     </div>
 
 
-    <div>
+    <div class:"ficha-Lorena">
         <h1>Maria de los Angeles Lorena Salgado Ruiz</h1>
         <br>
         <P>Pelicula favorita: No se aceptan devoluciones</P>
