:lipstick: estilos-ficha_Xoch

--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -58,13 +58,14 @@
     </div>
     <hr>
 
-    <div>
-        <h1>XOCHITL COLIN VILLAVICENCIO</h1>
-        <p>LA ESPADA EN LA PIEDRA</p>
+    <div class="Ficha-xoch"> 
+
+        <h1>❀XOCHITL COLIN VILLAVICENCIO.❀</h1>
+        <p>LA ESPADA EN LA PIEDRA.</p>
         <ul>
-            <li>REYNO</li>
-            <li>LITTLE JESUS</li>
-            <li>CAMILO SÉPTIMO</li>
+            <li>REYNO.</li>
+            <li>LITTLE JESUS.</li>
+            <li>CAMILO SÉPTIMO.</li>
         </ul>
     </div>
     <hr>
