:art: Ficha_Enrique

--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -142,19 +142,15 @@
     </div>
     <hr>
 
-    <div>
+    <div class="Ficha-Enrique">
         <h1>Enrique Aguirre Ortiz</h1>
         <br>
-        <p>El ultimo regalo</p>
+        <p><h2>El ultimo regalo</h2></p>
         <ul>
-
-            <li>
-                Alejandro fernandez
-            </li>
-            <li>pepe aguilar
-        
-            </li>
+           <h3> <li>Pepe Aguilar </li>
             <li>Antonio Aguilar</li>
+            <li>Alejandro Fernandez</li>
+            <h3>
         </ul>
     </div>
 </body>
