:lipstick: ficha-angel

--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -104,7 +104,7 @@
     </div>
 
 
-    <div class:"ficha-Lorena">
+    <div class="ficha-Lorena">
         <h1>Maria de los Angeles Lorena Salgado Ruiz</h1>
         <br>
         <P>Pelicula favorita: No se aceptan devoluciones</P>
@@ -118,13 +118,18 @@
     </div>
     <hr>
 
-    <div>
+    <div class="Ficha-angel">
         <h1>ANGEL CRUZ MARTINEZ</h1>
         <P>AMORES PERROS</P>
         <ul>
             <li>SIN BANDERA</li>
             <li>ZOE</li>
             <li>Evanescence</li>
+        </ul>
+    </div>
+    <hr>
+    <div>
+    
         <h1>LEONARDO MENDEZ MERLIN</h1>
         <BR>
         <P>SAW</P>
