:lipstick: ficha_carlos

--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -142,9 +142,8 @@
     </div>
     <hr>
 
-    <div>
+    <div class="Ficha-carlos">
         <h1>Carlos Uriel Flores Gómez</h1>
-        <br><br>
         <p>Interestelar</p>
         <ul>
             <li>XJapan</li>
