:lipstick: cambios-ficha-lorena

--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -104,7 +104,7 @@
     </div>
 
 
-    <div class="ficha-Lorena">
+    <div class="Ficha-lorena">
         <h1>Maria de los Angeles Lorena Salgado Ruiz</h1>
         <br>
         <P>Pelicula favorita: No se aceptan devoluciones</P>
