--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -36,7 +36,7 @@
         </ul>
     </div>
 
-    <div>
+    <div class="ficha-paola">
         <h1>Paola Barragan Bernal</h1>
         <br><br>
         <p>La vida es bella</p>
@@ -45,6 +45,8 @@
             <li>Kiss</li>
             <li>The Beatles</li>
            <li>Nsync</li>
+        </ul>
+    </div>
     --> 
 
     <div class="Ficha-julio">
