--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -85,7 +85,7 @@
         </ul>
     </div>
     <hr>
-    <div>
+    <div  class="Ficha-diego">
         <h1>Diego Galvan Lopez</h1><br>
         <p>Avengers Infinity war</p>
         <ul>
