--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -26,7 +26,7 @@
 
     -->
 
-    <div>
+    <div class="Ficha-Javier">
         <h1>Francisco Javier Alvarez Garcia</h1>
         <p>WandaVision</p>
         <ul>
@@ -97,7 +97,7 @@
     <hr>
     <div>
         <h1>Francisco Javier Alvarez Garcia</h1>
-        <p>WandaVisio</p>
+        <p>WandaVision</p>
         <ul>
             <li>Angeles Azules</li>
             <li>Daniela Calvario</li>
