:lipstick:  estilos-ficha-leonardo

--- a/practica 2/index.html
+++ b/practica 2/index.html
@@ -130,7 +130,7 @@
         </ul>
     </div>
     <hr>
-    <div>
+    <div class="Ficha-leonardo">
     
         <h1>LEONARDO MENDEZ MERLIN</h1>
         <BR>
